add cover and info

--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+
+</head>
+
+<body>
+    <div class="header-container">
+        <div class="header">
+            <h2 class="logo">i love berries</h2>
+            <ul class="header-links">
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </div>
+        <div class="cover">
+            <div class="cover-right">
+                <h1 class="title">This website is definitely about something</h1>
+                <div class="title-subtext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam convallis sem sed neque euismod lobortis. Nullam aliquam augue leo, at tristique ligula feugiat ut. Vestibulum erat diam, facilisis id purus vel, rutrum sollicitudin enim.</div>
+                <button class="sign-up-button">Sign up</button>
+            </div>
+            <div class="cover-left">
+                <img class="cover-photo" src="./images/pexels-wahid-hacene.jpg" alt="berries">
+            </div>
+        </div>
+    </div>
+
+    <div class="information-container">
+        <h3 class="info-header">Very important information</h3>
+        <div class="info-content">
+            <div class="block info-block-one">
+                <img class="berry-img" src="./images/strawberry-pexels-ylanite-koppens.jpg" alt="strawberry">
+                <div class="img-subtext">Donec eu arcu varius quam scelerisque rhoncus sit amet in risus. Vestibulum vel vehicula sem. Nam convallis vitae mi in ultrices.</div>
+            </div>
+            <div class="block info-block-two">
+                <img class="berry-img" src="./images/sable-standing.jpg" alt="strawberry">
+                <div class="img-subtext">Aliquam tincidunt sagittis orci, sit amet varius felis fringilla in. Vestibulum dignissim ullamcorper arcu, in interdum justo luctus sit amet.</div>
+            </div>
+
+            <div class="block info-block-three">
+                <img class="berry-img" src="./images/fireworks.jpg" alt="strawberry">
+                <div class="img-subtext">Aliquam sagittis accumsan purus, in placerat tellus rhoncus sed. Etiam vitae ultrices erat, accumsan pulvinar nibh.</div>
+            </div>
+            <div class="block info-block-four">
+                <img class="berry-img" src="./images/bitcoin.jpg" alt="strawberry">
+                <div class="img-subtext">Morbi aliquam odio a ipsum pretium hendrerit. Donec commodo sapien et porta bibendum. </div>
+            </div>
+        </div>
+
+    </div>
+</body>
+
+</html>
