add quote, calltoaction, copyright

--- a/index.html
+++ b/index.html
@@ -13,21 +13,22 @@
 <body>
     <div class="header-container">
         <div class="header">
-            <h2 class="logo">i love berries</h2>
-            <ul class="header-links">
+            <h2 class="right logo">Header Logo</h2>
+            <ul class="left header-links">
                 <li>header link one</li>
                 <li>header link two</li>
                 <li>header link three</li>
             </ul>
         </div>
         <div class="cover">
-            <div class="cover-right">
-                <h1 class="title">This website is definitely about something</h1>
-                <div class="title-subtext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam convallis sem sed neque euismod lobortis. Nullam aliquam augue leo, at tristique ligula feugiat ut. Vestibulum erat diam, facilisis id purus vel, rutrum sollicitudin enim.</div>
+            <div class="left cover-left">
+                <h1 class="title">This is a template</h1>
+                <div class="title-subtext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam convallis sem
+                    sed neque euismod lobortis.</div>
                 <button class="sign-up-button">Sign up</button>
             </div>
-            <div class="cover-left">
-                <img class="cover-photo" src="./images/pexels-wahid-hacene.jpg" alt="berries">
+            <div class="right cover-right">
+                <img src="./images/cabin2.jpg" alt="cabin">
             </div>
         </div>
     </div>
@@ -36,24 +37,54 @@
         <h3 class="info-header">Very important information</h3>
         <div class="info-content">
             <div class="block info-block-one">
-                <img class="berry-img" src="./images/strawberry-pexels-ylanite-koppens.jpg" alt="strawberry">
-                <div class="img-subtext">Donec eu arcu varius quam scelerisque rhoncus sit amet in risus. Vestibulum vel vehicula sem. Nam convallis vitae mi in ultrices.</div>
+                <img class="info-img" src="./images/strawberry.jpg" alt="strawberry">
+                <div class="img-subtext">Donec eu arcu varius quam scelerisque rhoncus sit amet in risus. Vestibulum vel
+                    vehicula sem. Nam convallis vitae mi in ultrices.</div>
             </div>
             <div class="block info-block-two">
-                <img class="berry-img" src="./images/sable-standing.jpg" alt="strawberry">
-                <div class="img-subtext">Aliquam tincidunt sagittis orci, sit amet varius felis fringilla in. Vestibulum dignissim ullamcorper arcu, in interdum justo luctus sit amet.</div>
+                <img class="info-img" src="./images/sable-standing.jpg" alt="sable standing">
+                <div class="img-subtext">Aliquam tincidunt sagittis orci, sit amet varius felis fringilla in. Vestibulum
+                    dignissim ullamcorper arcu, in interdum justo luctus sit amet.</div>
             </div>
 
             <div class="block info-block-three">
-                <img class="berry-img" src="./images/fireworks.jpg" alt="strawberry">
-                <div class="img-subtext">Aliquam sagittis accumsan purus, in placerat tellus rhoncus sed. Etiam vitae ultrices erat, accumsan pulvinar nibh.</div>
+                <img class="info-img" src="./images/fireworks.jpg" alt="fireworks">
+                <div class="img-subtext">Aliquam sagittis accumsan purus, in placerat tellus rhoncus sed. Etiam vitae
+                    ultrices erat, accumsan pulvinar nibh.</div>
             </div>
             <div class="block info-block-four">
-                <img class="berry-img" src="./images/bitcoin.jpg" alt="strawberry">
-                <div class="img-subtext">Morbi aliquam odio a ipsum pretium hendrerit. Donec commodo sapien et porta bibendum. </div>
+                <img class="info-img" src="./images/camping.jpg" alt="camping">
+                <div class="img-subtext">Morbi aliquam odio a ipsum pretium hendrerit. Donec commodo sapien et porta
+                    bibendum. </div>
             </div>
         </div>
 
+    </div>
+
+    <div class="quote-wrapper">
+        <div class="quote">
+            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
+            people will actually read it. Who knows? All I know is that it looks nice.
+        </div>
+        <div class="quote-author">
+            -Thor, God of Thunder
+        </div>
+    </div>
+
+    <div class="cta-container">
+        <div class="cta-wrapper">
+            <div class="cta-text">
+                <div class="cta-title">Call to action! It's time!</div>
+                <div class="cta-subtext">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <button class="cta-signup">Sign up</button>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="footer-text">
+            Copyright information
+        </div>
     </div>
 </body>
 
