--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     <div class="footer">
         <div class="footer-text">
-            Copyright information
+            Copyright © The Odin Project 2021
         </div>
     </div>
 </body>
